--- a/tutorials/index.ipynb
+++ b/tutorials/index.ipynb
@@ -41,6 +41,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[UVa 732][UVa732]: **Anagrams by `stack`** ([code][UVa732:code])<br>\n",
+    "a mix of interesting concepts: *depth-first* search on a graph of *states* where in each state a `pop` and `push` actions can be applied to a source string, so updated as a `stack` object. *Pruning* happens when the current prefix doesn't match the target anagram and a *second* `stack` is used to help choices in recursion.\n",
+    "\n",
+    "[UVa732]:https://uva.onlinejudge.org/index.php?option=com_onlinejudge&Itemid=8&page=show_problem&problem=673\n",
+    "[UVa732:code]:https://github.com/massimo-nocentini/competitive-programming/blob/master/UVa/732.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "[UVa 10264][UVa10264]: **The Most Potent Corner** ([code][UVa10264:code])<br>\n",
     "$N$-dimensional cube, find corner's connections by *bitwise toggling*. At first I didn't understand the order of vertices, then resort to [this help][help] and implement it in a pythonic way, namely avoiding redundant code and doubled neighbours computation.\n",
     "\n",
