--- a/tutorials/index.ipynb
+++ b/tutorials/index.ipynb
@@ -41,6 +41,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "[UVa 1062][UVa1062]: **Containers** ([code][UVa1062:code])<br>\n",
+    "use a set of stacks where you push an object `c` onto a stack `s` iff `c <= s[-1]`; this allows us to minimize the number of stacks when *all* stacked elements are popped out in *lexigraphic* order.\n",
+    "\n",
+    "[UVa1062]:https://uva.onlinejudge.org/index.php?option=com_onlinejudge&Itemid=8&page=show_problem&problem=3503\n",
+    "[UVa1062:code]:https://github.com/massimo-nocentini/competitive-programming/blob/master/UVa/1062.py"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "[UVa 732][UVa732]: **Anagrams by `stack`** ([code][UVa732:code])<br>\n",
     "a mix of interesting concepts: *depth-first* search on a graph of *states* where in each state a `pop` and `push` actions can be applied to a source string, so updated as a `stack` object. *Pruning* happens when the current prefix doesn't match the target anagram and a *second* `stack` is used to help choices in recursion.\n",
     "\n",
