--- a/tutorials/bitmasking.ipynb
+++ b/tutorials/bitmasking.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -1780,6 +1780,316 @@
     "        print(\"{}-{} solution computed in {:.3} {}:\\n{}\".format(i+1, o if i < 2 else (\"rd\" if i == 2 else \"th\"), \n",
     "                                                                *t, pretty(s, dim, lower_greek_symbols())))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Catalan structures"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "# in the following, the symbol ★ has a generation power, \n",
+    "# namely produces a new structure with the basic shape replacing it.\n",
+    "\n",
+    "\"\"\"\n",
+    "  ●\n",
+    "★ o ★  \n",
+    "\"\"\"\n",
+    "bintree_shape = lambda r, c: [((r+1, c-1), (r+1, c+1))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "shapes = [bintree_shape]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def catalan_structures(shapes, start_cell, locating):\n",
+    "    \"Returns a generator of structures according `shapes` recursion schemas, starting at anchor `init`.\"\n",
+    "    \n",
+    "    from collections import deque\n",
+    "    \n",
+    "    coordinates, numbering = locating\n",
+    "    \n",
+    "    # `stars` is an integer to be used as bitmask: 1 in position k means that a ★ is present at cell numbered k\n",
+    "    \n",
+    "    def gen(structures):\n",
+    "        \n",
+    "        while structures: # we assume a grid as in Polyominoes, so cells are numbered increasingly,\n",
+    "                              # from top to bottom, then from left to right.\n",
+    "            anchors, stars = structures.popleft()\n",
+    "            while stars:\n",
+    "                anchor = low_bit(stars) # this and the following line should be abstracted out as `low_bit_and_clear`\n",
+    "                stars = clear_bit(stars, anchor)\n",
+    "                r, c = coordinates(anchor)\n",
+    "                local_structures = []\n",
+    "                for s in shapes:\n",
+    "                    for orientation in s(r, c):\n",
+    "                        for star in orientation:\n",
+    "                            # numbering and coordinates are inverses the one of the other\n",
+    "                            struct = set_bit(anchors, anchor), set_bit(stars, numbering(star))\n",
+    "                            local_structures.append(struct)\n",
+    "                yield tuple(local_structures)\n",
+    "                structures.extend(local_structures)\n",
+    "                \n",
+    "    init = 0b0, 1 << start_cell\n",
+    "    return gen(deque([init]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                        ●                        \n",
+      "                      ★   ★                      \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "\n",
+      "\n",
+      "                        ●                        \n",
+      "                      ●                          \n",
+      "                    ★   ★                        \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "\n",
+      "\n",
+      "                        ●                        \n",
+      "                          ●                      \n",
+      "                        ★   ★                    \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "\n",
+      "\n",
+      "                        ●                        \n",
+      "                      ●                          \n",
+      "                    ●                            \n",
+      "                  ★   ★                          \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "\n",
+      "\n",
+      "                        ●                        \n",
+      "                      ●                          \n",
+      "                        ●                        \n",
+      "                      ★   ★                      \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "\n",
+      "\n",
+      "                        ●                        \n",
+      "                          ●                      \n",
+      "                        ●                        \n",
+      "                      ★   ★                      \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "\n",
+      "\n",
+      "                        ●                        \n",
+      "                          ●                      \n",
+      "                            ●                    \n",
+      "                          ★   ★                  \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "\n",
+      "\n",
+      "                        ●                        \n",
+      "                      ●                          \n",
+      "                    ●                            \n",
+      "                  ●                              \n",
+      "                ★   ★                            \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "\n",
+      "\n",
+      "                        ●                        \n",
+      "                      ●                          \n",
+      "                    ●                            \n",
+      "                      ●                          \n",
+      "                    ★   ★                        \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "\n",
+      "\n",
+      "                        ●                        \n",
+      "                      ●                          \n",
+      "                        ●                        \n",
+      "                      ●                          \n",
+      "                    ★   ★                        \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "rows, cols = 15, 25\n",
+    "\n",
+    "def coordinates(anchor):\n",
+    "    c, r = divmod(anchor, rows)\n",
+    "    return r, c # simply flip them\n",
+    "\n",
+    "def numbering(coordinate):\n",
+    "    r, c = coordinate\n",
+    "    return r + rows*c\n",
+    "\n",
+    "# starts at the first cell of the 13th column\n",
+    "bin_trees = catalan_structures(shapes, rows*12, (coordinates, numbering)) \n",
+    "\n",
+    "from collections import defaultdict\n",
+    "\n",
+    "for i in range(10):\n",
+    "    structures = next(bin_trees) # returns them level by level\n",
+    "    table = defaultdict(lambda: ' ')\n",
+    "    for anchors, stars in structures:\n",
+    "        for a in ones_of(anchors):\n",
+    "            table[coordinates(a)] = '●'\n",
+    "        \n",
+    "        for s in ones_of(stars):\n",
+    "            table[coordinates(s)] = '★'\n",
+    "    s = ''\n",
+    "    for r in range(rows):\n",
+    "        s += ' '.join(table[r, c] for c in range(cols)) + '\\n'\n",
+    "    print(s + '\\n')\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
