Fix Binary Forests.

--- a/tutorials/recursive-structures.ipynb
+++ b/tutorials/recursive-structures.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 67,
    "metadata": {
     "collapsed": true
    },
@@ -66,12 +66,12 @@
     "    \n",
     "    coordinates, numbering = locating\n",
     "            \n",
-    "    def gen(structures):\n",
+    "    def gen(generation):\n",
     "\n",
-    "        yield structures\n",
+    "        yield generation\n",
     "\n",
-    "        local_structures = []\n",
-    "        for anchors, stars in structures:\n",
+    "        next_generation = []\n",
+    "        for anchors, stars in generation:\n",
     "            while stars: # `stars` is an integer to be used as bitmask: 1 in position k \n",
     "                         # means that a ★ is present at cell numbered k\n",
     "                anchor, stars = low_bit_and_clear(stars)\n",
@@ -79,7 +79,7 @@
     "                for s in shapes:\n",
     "                    for orientation in s(r, c):\n",
     "                        augmented_stars = stars\n",
-    "                        multiplicities = 1\n",
+    "                        multiplicities = 1 # are really necessary?\n",
     "                        \n",
     "                        for star in orientation:\n",
     "                            rs, cs, *offsets = star\n",
@@ -97,13 +97,13 @@
     "                            augmented_stars = set_bit(augmented_stars, star_cell)\n",
     "                            \n",
     "                        struct = set_bit(anchors, anchor), augmented_stars\n",
-    "                        local_structures.extend([struct]*multiplicities)\n",
+    "                        next_generation.extend([struct]*multiplicities)\n",
     "\n",
-    "        yield from gen(local_structures)\n",
+    "        yield from gen(next_generation)\n",
     "                \n",
-    "    init = 0b0, 1 << start_cell\n",
+    "    init_structure = 0b0, 1 << start_cell\n",
     "    \n",
-    "    return gen([init])"
+    "    return gen([init_structure])"
    ]
   },
   {
@@ -115,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "metadata": {
     "collapsed": true
    },
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 46,
    "metadata": {
     "collapsed": true
    },
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 47,
    "metadata": {
     "collapsed": false
    },
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 48,
    "metadata": {
     "collapsed": false
    },
@@ -269,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 49,
    "metadata": {
     "collapsed": false
    },
@@ -311,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 50,
    "metadata": {
     "collapsed": false
    },
@@ -1257,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 68,
    "metadata": {
     "collapsed": true
    },
@@ -1279,7 +1279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 69,
    "metadata": {
     "collapsed": true
    },
@@ -1290,7 +1290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 74,
    "metadata": {
     "collapsed": true
    },
@@ -1300,7 +1300,7 @@
     "coor, number = coordinates(rows), numbering(rows)\n",
     "\n",
     "# starts at the first cell of the 13th column\n",
-    "forests = recursive_structures(shapes, rows*12, (coor, number))\n",
+    "forests = recursive_structures(shapes, rows*12+4, (coor, number)) # be aware that in this case it grows upwards!\n",
     "representations = map(pretty, forests)"
    ]
   },
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
@@ -1322,11 +1322,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
       "                        ★                        \n",
-      "                                                 \n",
-      "                                                 \n",
-      "                                                 \n",
-      "                                                 \n",
       "                                                 \n",
       "                                                 \n",
       "                                                 \n",
@@ -1347,7 +1347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false
    },
@@ -1356,56 +1356,60 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                        ● ★                      \n",
-      "                                                 \n",
-      "                                                 \n",
-      "                                                 \n",
-      "                                                 \n",
-      "                                                 \n",
-      "                                                 \n",
-      "                        ★                        \n",
-      "                        ●                        \n",
-      "                        ★ ★                      \n",
-      "                                                 \n",
-      "                                                 \n",
-      "                                                 \n",
-      "                                                 \n",
-      "                                                 \n",
-      "                                                 \n",
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(next(representations))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Next generation:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "                        ● ★                      \n",
-      "                                                 \n",
-      "                                                 \n",
       "                                                 \n",
       "                                                 \n",
       "                                                 \n",
       "                          ★                      \n",
       "                        ● ★                      \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                        ●                        \n",
+      "                        ★ ★                      \n",
+      "                                                 \n",
+      "                                                 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(next(representations))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next generation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                 \n",
+      "                                                 \n",
+      "                            ★                    \n",
+      "                          ● ★                    \n",
+      "                        ● ★                      \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                                                 \n",
+      "                          ●                      \n",
       "                        ● ★ ★                    \n",
       "                                                 \n",
       "                                                 \n",
@@ -1413,7 +1417,7 @@
       "                                                 \n",
       "                                                 \n",
       "                                                 \n",
-      "                        ●                        \n",
+      "                            ★                    \n",
       "                        ● ● ★                    \n",
       "                                                 \n",
       "                                                 \n",
@@ -1421,7 +1425,7 @@
       "                                                 \n",
       "                                                 \n",
       "                                                 \n",
-      "                          ★                      \n",
+      "                                                 \n",
       "                        ● ●                      \n",
       "                          ★ ★                    \n",
       "                                                 \n",
@@ -1458,10 +1462,6 @@
       "                          ●                      \n",
       "                          ★ ★                    \n",
       "                                                 \n",
-      "                                                 \n",
-      "                                                 \n",
-      "                                                 \n",
-      "                                                 \n",
       "\n"
      ]
     }
@@ -1479,7 +1479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 78,
    "metadata": {
     "collapsed": true
    },
