Add *linearization*, probably commonly known as *Ballot sequence*.

--- a/tutorials/recursive-structures.ipynb
+++ b/tutorials/recursive-structures.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "<div align=\"right\">\n",
     "Massimo Nocentini<br>\n",
+    "<br>May 29, 2016: Linearization\n",
     "<br>May 28, 2016: Binary Forests, Sigmoids\n",
     "<br>May 27, 2016: Binary and Ternary Trees, Dick paths\n",
     "<br>May 26, 2016: structure generation\n",
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -144,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 3,
    "metadata": {
     "collapsed": true
    },
@@ -2243,6 +2244,255 @@
       "        ●     ★                                  \n",
       "            ●                                    \n",
       "                ★                                \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(next(representations))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Linearization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# in the following, the symbol ★ has a generation power, \n",
+    "# namely produces a new structure with the basic shape replacing it.\n",
+    "\n",
+    "\"\"\" \n",
+    "● ★ ★  \n",
+    "\"\"\"\n",
+    "linear_shape = lambda r, c: [((r, c+1, 0, 2), (r, c+2))]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "shapes = [linear_shape]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "rows, cols = 3, 25\n",
+    "coor, number = coordinates(rows), numbering(rows)\n",
+    "\n",
+    "linears = recursive_structures(shapes, 1, (coor, number))\n",
+    "representations = map(pretty, linears)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "First generation contains only the *seed* symbol ★"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                 \n",
+      "★                                                \n",
+      "                                                 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(next(representations))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next generation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                 \n",
+      "● ★ ★                                            \n",
+      "                                                 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(next(representations))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next generation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                 \n",
+      "● ● ★ ★ ★                                        \n",
+      "                                                 \n",
+      "                                                 \n",
+      "●   ● ★ ★                                        \n",
+      "                                                 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(next(representations))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next generation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                 \n",
+      "● ● ● ★ ★ ★ ★                                    \n",
+      "                                                 \n",
+      "                                                 \n",
+      "● ●   ● ★ ★ ★                                    \n",
+      "                                                 \n",
+      "                                                 \n",
+      "● ●     ● ★ ★                                    \n",
+      "                                                 \n",
+      "                                                 \n",
+      "●   ● ● ★ ★ ★                                    \n",
+      "                                                 \n",
+      "                                                 \n",
+      "●   ●   ● ★ ★                                    \n",
+      "                                                 \n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(next(representations))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Next generation:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                                 \n",
+      "● ● ● ● ★ ★ ★ ★ ★                                \n",
+      "                                                 \n",
+      "                                                 \n",
+      "● ● ●   ● ★ ★ ★ ★                                \n",
+      "                                                 \n",
+      "                                                 \n",
+      "● ● ●     ● ★ ★ ★                                \n",
+      "                                                 \n",
+      "                                                 \n",
+      "● ● ●       ● ★ ★                                \n",
+      "                                                 \n",
+      "                                                 \n",
+      "● ●   ● ● ★ ★ ★ ★                                \n",
+      "                                                 \n",
+      "                                                 \n",
+      "● ●   ●   ● ★ ★ ★                                \n",
+      "                                                 \n",
+      "                                                 \n",
+      "● ●   ●     ● ★ ★                                \n",
+      "                                                 \n",
+      "                                                 \n",
+      "● ●     ● ● ★ ★ ★                                \n",
+      "                                                 \n",
+      "                                                 \n",
+      "● ●     ●   ● ★ ★                                \n",
+      "                                                 \n",
+      "                                                 \n",
+      "●   ● ● ● ★ ★ ★ ★                                \n",
+      "                                                 \n",
+      "                                                 \n",
+      "●   ● ●   ● ★ ★ ★                                \n",
+      "                                                 \n",
+      "                                                 \n",
+      "●   ● ●     ● ★ ★                                \n",
+      "                                                 \n",
+      "                                                 \n",
+      "●   ●   ● ● ★ ★ ★                                \n",
+      "                                                 \n",
+      "                                                 \n",
+      "●   ●   ●   ● ★ ★                                \n",
+      "                                                 \n",
       "\n"
      ]
     }
